# Changelog

08-03-2015 - v. 0.9.2:
  - Added logging and monitoring to cleanup process.

07-03-2015 - v. 0.9.1:
  - Bug fix. Removed cleanup from initial snapshot round, as it might destroy the common snapshot.
  - Added check to make sure the last common snapshot doesn't get destroyed in cleanup process in general.
  - Log beautification.
  - Added documentation.

27-02-2015 - v. 0.9 - First release.