@@ -1,5 +1,8 @@
 # Changelog
 
+11-04-2015 - v. 0.9.3:
+  - Added functionality: Changed zfs receive options and added filesystem checks to enable different keep rules for master and slave.
+
 08-03-2015 - v. 0.9.2:
   - Added logging and monitoring to cleanup process.
 
